--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -822,6 +822,14 @@
         "twitterTitle": "WhitesLove сервистер каталогы",
         "twitterDescription": "Әзірлеу мен күнделікті жұмысқа арналған онлайн құралдарға жылдам қолжеткізу."
       },
+      "emailEditor": {
+        "title": "HTML хаттар редакторы",
+        "description": "Gmail, Outlook және Yandex Mail үшін HTML хаттарды жасауға және тексеруге арналған онлайн редактор.",
+        "ogTitle": "HTML хаттар редакторы",
+        "ogDescription": "HTML хаттарды шаблондармен жасап, пошта клиенттерінде алдын ала қарау.",
+        "twitterTitle": "HTML хаттар редакторы",
+        "twitterDescription": "HTML хаттарды құру және алдын ала қарау."
+      },
       "converter": {
         "title": "Онлайн файл түрлендіргіш — медиа, деректер және құжаттар",
         "description": "Суреттерді, кестелік деректерді және құжаттарды браузерде қажетті форматқа түрлендіріңіз.",
