--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -922,12 +922,20 @@
         "twitterDescription": "Конвертируйте файлы, редактируйте контент и автоматизируйте рутинные процессы онлайн."
       },
       "services": {
-        "title": "Все сервисы — каталог инструментов WhitesLove",
+        "title": "Сервисы — каталог инструментов WhitesLove",
         "description": "Полный список сервисов WhitesLove: фильтруйте по категориям и находите нужный инструмент за секунды.",
         "ogTitle": "Каталог сервисов WhitesLove",
         "ogDescription": "Собранные в одном месте инструменты для файлов, контента и автоматизации.",
         "twitterTitle": "Каталог сервисов WhitesLove",
         "twitterDescription": "Быстрый доступ к онлайн-инструментам для разработки и повседневной работы."
+      },
+      "emailEditor": {
+        "title": "Редактор HTML-писем",
+        "description": "Онлайн-редактор HTML-писем с проверкой, шаблонами и предпросмотром для Gmail, Outlook и Яндекс Почты.",
+        "ogTitle": "Редактор HTML-писем",
+        "ogDescription": "Создавайте и проверяйте HTML-письма для популярных почтовых клиентов с поддержкой шаблонов.",
+        "twitterTitle": "Редактор HTML-писем",
+        "twitterDescription": "Создание и предпросмотр HTML-писем для Gmail, Outlook и Яндекс Почты."
       },
       "converter": {
         "title": "Конвертер файлов онлайн — изображения, данные и документы",
