--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -5,6 +5,101 @@
     }
   },
   "services": {
+    "svgEditor": {
+      "title": "Редактор SVG",
+      "subtitle": "Загрузите файл или вставьте SVG-код. Предпросмотр обновляется сразу, можно чистить мусор и править цвета/stroke.",
+      "sections": {
+        "input": {
+          "title": "Ввод"
+        },
+        "preview": {
+          "title": "Предпросмотр"
+        }
+      },
+      "inputs": {
+        "file": "SVG-файл",
+        "code": "SVG-код",
+        "codePlaceholder": "Вставьте сюда SVG-разметку..."
+      },
+      "outputs": {
+        "normalized": "Текущий SVG",
+        "normalizedPlaceholder": "Результат появится здесь..."
+      },
+      "actions": {
+        "apply": "Применить",
+        "minify": "Минифицировать",
+        "removeDimensions": "Убрать размеры",
+        "replaceColors": "Заменить цвета",
+        "editStroke": "Редактировать stroke"
+      },
+      "titles": {
+        "apply": "Применить код к предпросмотру",
+        "minify": "Удалить мусорные теги и комментарии",
+        "removeDimensions": "Удалить width и height у корневого <svg>",
+        "replaceColors": "Заменить цвета fill/stroke (включая currentColor)",
+        "editStroke": "Добавить/убрать/изменить stroke и stroke-width"
+      },
+      "preview": {
+        "emptyTitle": "SVG ещё не загружен",
+        "emptySubtitle": "Загрузите файл или вставьте код и нажмите «Применить»."
+      },
+      "errors": {
+        "empty": "SVG-код пустой.",
+        "noSvgRoot": "Корневой элемент <svg> не найден.",
+        "parse": "Не удалось разобрать SVG. Проверьте разметку.",
+        "fileNotSvg": "Выбранный файл не является .svg.",
+        "fileRead": "Не удалось прочитать файл.",
+        "fileTooLarge": "Файл слишком большой."
+      },
+      "modals": {
+        "common": {
+          "close": "Закрыть",
+          "apply": "Применить"
+        },
+        "colors": {
+          "title": "Замена цветов",
+          "empty": "Цвета не найдены.",
+          "from": "Было",
+          "to": "Стало",
+          "count": "Вхождений",
+          "pick": "Выбрать",
+          "useCurrentColor": "Использовать currentColor",
+          "currentColor": "currentColor",
+          "placeholders": {
+            "color": "Например: #AABBCC или rgb(...)"
+          },
+          "titles": {
+            "pickColor": "Выбрать цвет замены",
+            "nativePicker": "Выбрать цвет"
+          },
+          "errors": {
+            "invalidColor": "Некорректный цвет."
+          }
+        },
+        "stroke": {
+          "title": "Редактор stroke",
+          "elements": "Элементы",
+          "edit": "Редактирование",
+          "strokeWidth": "stroke-width",
+          "strokeColor": "stroke",
+          "useCurrentColor": "Использовать currentColor",
+          "saveElement": "Сохранить элемент",
+          "placeholders": {
+            "strokeWidth": "Например: 2",
+            "strokeColor": "Например: #FF00AA или rgb(...)"
+          },
+          "titles": {
+            "pickColor": "Выбрать цвет stroke",
+            "nativePicker": "Выбрать цвет stroke",
+            "saveElement": "Сохранить изменения для выбранного элемента"
+          },
+          "errors": {
+            "strokeWidth": "stroke-width должен быть неотрицательным числом.",
+            "invalidColor": "Некорректный цвет."
+          }
+        }
+      }
+    },
     "emailEditor": {
       "title": "Редактор писем",
       "subtitle": "Создание, проверка и предпросмотр HTML-писем для популярных почтовых клиентов.",
@@ -798,20 +893,6 @@
       "description": "Учитесь у профессионалов, использующих ИИ для ускорения работы.",
       "cta": "Присоединиться бесплатно"
     },
-    "featureCards": {
-      "noRisk": {
-        "title": "100% гарантия возврата средств",
-        "description": "Возврат возможен в течение 14 дней с момента покупки"
-      },
-      "upgrade": {
-        "title": "Обновляйте или отменяйте в любое время",
-        "description": "Множество вариантов и гибкость использования."
-      },
-      "free": {
-        "title": "Не уверены? Попробуйте бесплатно",
-        "description": "Возврат возможен в течение 14 дней с момента покупки"
-      }
-    },
     "reviewLogos": {
       "title": "Основано на 20 000+ отзывах"
     }
@@ -833,49 +914,7 @@
       "showMore": "Показать больше",
       "getStarted": "Начать"
     },
-    "limitedOffer": "Ограниченное предложение",
-    "plans": {
-      "basic": {
-        "name": "Базовый",
-        "description": "Для больших команд и компаний",
-        "monthly": "Бесплатно",
-        "yearly": "Бесплатно",
-        "features": [
-          "7 700 задач, срок 3–5 дней",
-          "6+ базовых разработок",
-          "5+ задач по одной",
-          "AI-обновления блога через панель и Slack",
-          "Расширенные обновления через панель и Slack"
-        ]
-      },
-      "premium": {
-        "name": "Премиум",
-        "description": "Для больших команд и компаний",
-        "monthly": "$59.00 / в месяц",
-        "yearly": "$499.00 / в год",
-        "features": [
-          "12 700 задач, срок 7–9 дней",
-          "6+ базовых разработок",
-          "5+ задач по одной",
-          "7 700 задач, срок 3–5 дней",
-          "AI-обновления блога через панель и Slack",
-          "Расширенные обновления через панель и Slack"
-        ]
-      },
-      "enterprise": {
-        "name": "Корпоративный",
-        "description": "Для больших команд и компаний",
-        "monthly": "$79.00 / в месяц",
-        "yearly": "$599.00 / в год",
-        "features": [
-          "15 700 задач, срок 15–30 дней",
-          "6+ базовых разработок",
-          "5+ задач по одной",
-          "7 700 задач, срок 3–5 дней",
-          "6+ базовых разработок"
-        ]
-      }
-    }
+    "limitedOffer": "Ограниченное предложение"
   },
   "footer": {
     "about": "Давно известно, что читатель отвлекается на содержимое при чтении.",
@@ -928,6 +967,14 @@
         "ogDescription": "Собранные в одном месте инструменты для файлов, контента и автоматизации.",
         "twitterTitle": "Каталог сервисов WhitesLove",
         "twitterDescription": "Быстрый доступ к онлайн-инструментам для разработки и повседневной работы."
+      },
+      "svgEditor": {
+        "title": "Редактор SVG",
+        "description": "Редактируйте SVG: предпросмотр, минификация, замена цветов, управление stroke.",
+        "ogTitle": "Редактор SVG",
+        "ogDescription": "Редактируйте SVG: предпросмотр, минификация, замена цветов, управление stroke.",
+        "twitterTitle": "Редактор SVG",
+        "twitterDescription": "Редактируйте SVG: предпросмотр, минификация, замена цветов, управление stroke."
       },
       "emailEditor": {
         "title": "Редактор HTML-писем",
