--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -1,4 +1,33 @@
 {
+  "chat": {
+    "title": "Әзірлеушімен чат",
+    "loading": "Хабарламалар жүктелуде…",
+    "send": "Жіберу",
+    "input": {
+      "placeholder": "Хабарлама енгізіңіз…"
+    },
+    "attach": {
+      "label": "Файл"
+    },
+    "status": {
+      "online": "Байланыста",
+      "connecting": "Қосылуда…"
+    },
+    "system": {
+      "language_notice": "Назар аударыңыз: нақты адам тек орыс, ағылшын және украин тілдерінде сөйлейді. Қазақ тілі аудармашы арқылы қолжетімді.",
+      "choose_language": "Ағымдағы тілде ({language}) жалғастырғыңыз келе ме, әлде басқа тіл таңдайсыз ба?",
+      "choose_channel": "Әзірлеушімен қай жерде сөйлескіңіз келеді?",
+      "channel_site": "Сайтта қалу",
+      "channel_telegram": "Telegram-ға өту",
+      "enter_tg": "Әзірлеуші сізбен тікелей байланысуы үшін Telegram никіңізді @ арқылы енгізіңіз.",
+      "telegram_done": "Рахмет. Әзірлеуші сізбен жақын арада @WhitesLove аккаунтынан байланысады.",
+      "session_closed": "Диалог жабылды."
+    },
+    "errors": {
+      "empty": "Хабарлама бос болмауы керек",
+      "closed": "Диалог жабылған"
+    }
+  },
   "errors": {
     "kicker": {
       "notFound": "Бет табылмады",
