--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,4 +1,33 @@
 {
+  "chat": {
+    "title": "Чат с разработчиком",
+    "loading": "Загрузка сообщений…",
+    "send": "Отправить",
+    "input": {
+      "placeholder": "Введите сообщение…"
+    },
+    "attach": {
+      "label": "Файл"
+    },
+    "status": {
+      "online": "На связи",
+      "connecting": "Подключение…"
+    },
+    "system": {
+      "language_notice": "Пожалуйста, учтите, что реальный человек владеет только разговорными: русским, английским, украинским. Казахским — через переводчик.",
+      "choose_language": "Вы хотите продолжить общение на текущем языке ({language}) или выбрать другой?",
+      "choose_channel": "Где вам удобнее продолжить общение с разработчиком?",
+      "channel_site": "Остаться на сайте",
+      "channel_telegram": "Перейти в Telegram",
+      "enter_tg": "Пожалуйста, введите ваш Telegram-ник через @, чтобы разработчик могла связаться с вами напрямую.",
+      "telegram_done": "Спасибо. Разработчик свяжется с вами как можно скорее с ника @WhitesLove.",
+      "session_closed": "Диалог закрыт."
+    },
+    "errors": {
+      "empty": "Сообщение не может быть пустым",
+      "closed": "Диалог уже закрыт"
+    }
+  },
   "header": {
     "button": {
       "changeTheme": "Изменить тему"
